# TryRegressionsOnGHA

./: CMakeLists.txt  build_regression_bundle.py  build_regression_summary.py  create_shortcut.ps1  main.cpp
.github/workflows/: build_documentation.yml  build_documentation.yml.renamed  package.yml  test.yml  test.yml.renamed
